--- a/docs/latexhelp/doc.tex
+++ b/docs/latexhelp/doc.tex
@@ -112,6 +112,24 @@ Achieves arc consistency.
 diseq(v0,v1)
 \end{verbatim}
 }
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Constrain two variables to take different values.
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+Achieves arc consistency.
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+diseq(v0,v1)
+\end{verbatim}
+}
 \section{constraints div}
 \paragraph{Description}
 {\footnotesize
@@ -275,6 +293,30 @@ Achieves bounds consistency.
 help constraints minuseq
 \end{verbatim}
 }
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Constrain two variables to take equal values.
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+eq(x0,x1)
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+Achieves bounds consistency.
+\end{verbatim}
+}
+\paragraph{Reference}
+{\footnotesize
+\begin{verbatim}
+help constraints minuseq
+\end{verbatim}
+}
 \section{constraints gacalldiff}
 \paragraph{Description}
 {\footnotesize
@@ -299,6 +341,18 @@ gacalldiff(myVec)
 {\footnotesize
 \begin{verbatim}
 This constraint enforces generalized arc consistency.
+\end{verbatim}
+}
+\section{constraints gacschema}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+An extensional constraint that enforces GAC. The constraint is
+specified via a list of tuples.
+
+The format, and usage of gacschema, is identical to the 'table' constraint.
+It is difficult to predict which out of 'table' and 'gacschema' will be faster
+for any particular problem.
 \end{verbatim}
 }
 \section{constraints gcc}
@@ -398,6 +452,80 @@ of the primary variables.
 
 The consistency over the capacity variables is weaker than the gcc constraint, 
 hence the name gccweak.
+\end{verbatim}
+}
+\section{constraints haggisgac}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+An extensional constraint that enforces GAC. This constraint make uses
+of 'short tuples', which allow some values to be marked as "don't care".
+When this allows the set of tuples to be reduced in size, this leads to
+performance gains.
+
+The variables used in the constraint have to be BOOL or DISCRETE variables.
+Other types are not supported.
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+
+Consider the constraint "min([x1,x2,x3],x4)" on Booleans variables
+x1,x2,x3,x4.
+
+Represented as a TUPLELIST for a table or gacschema constraint, this would
+look like:
+
+**TUPLELIST**
+mycon 8 4
+0 0 0 0
+0 0 1 0
+0 1 0 0
+0 1 1 0
+1 0 0 0
+1 0 1 0
+1 1 0 0
+1 1 1 1
+
+Short tuples give us a way of shrinking this list. Short tuples consist
+of pairs (x,y), where x is a varible position, and y is a value for that 
+variable. For example:
+
+[(0,0),(3,0)]
+
+Represents "If the variable at index 0 is 0, and the variable at index
+3 is 0, then the constraint is true".
+
+This allows us to represent our constraint as follows:
+
+**SHORTTUPLELIST**
+mycon 4
+[(0,0),(3,0)]
+[(1,0),(3,0)]
+[(2,0),(3,0)]
+[(0,1),(1,1),(2,1),(3,1)]
+
+Note that some tuples are double-represented here. The first 3 short
+tuples all allow the assignment '0 0 0 0'. This is fine. The important
+thing for efficency is to try to give a small list of short tuples.
+
+
+We use this tuple by writing:
+
+haggisgac([x1,x2,x3,x4], mycon)
+
+and now the variables [x1,x2,x3,x4] will satisfy the constraint mycon.
+\end{verbatim}
+}
+\section{constraints haggisgac-stable}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+An extensional constraint that enforces GAC. haggisgac-stable
+is a variant of haggisgac which uses less memory in some cases,
+and can also be faster (or slower). The input is identical to
+haggisgac.
 \end{verbatim}
 }
 \section{constraints hamming}
@@ -612,6 +740,22 @@ for the opposite constraint.
 \end{verbatim}
 }
 \section{constraints minuseq}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Constraint
+
+   minuseq(x,y)
+
+ensures that x=-y.
+\end{verbatim}
+}
+\paragraph{Reference}
+{\footnotesize
+\begin{verbatim}
+help constraints eq
+\end{verbatim}
+}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
@@ -866,6 +1010,45 @@ See
    help constraints reification
 \end{verbatim}
 }
+\section{constraints shortstr2}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Another type of table constraint.
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+
+ShortSTR2 is an implementation of STR2 by Christophe Lecoutre, adapted for
+short supports.
+
+shortstr2([x,y,z], [[1,2,3], [1,3,2]])
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+This constraint enforces generalized arc consistency.
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+
+ShortSTR2 is an implementation of STR2 by Christophe Lecoutre, adapted for
+short supports.
+
+shortstr2([x,y,z], [[1,2,3], [1,3,2]])
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+This constraint enforces generalized arc consistency.
+\end{verbatim}
+}
 \section{constraints sumgeq}
 \paragraph{Description}
 {\footnotesize
@@ -889,6 +1072,28 @@ ensures that sum(vec) <= c.
 \end{verbatim}
 }
 \section{constraints table}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help input tuplelist
+help input table
+help input haggisgac
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help input haggisgac-stable
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help input shorttuplelist
+help input negativetable
+help input haggisgac
+\end{verbatim}
+}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
@@ -938,7 +1143,9 @@ table(myvec, {<0,0,0>,<1,0,0>,<0,1,0>,<0,0,1>})
 {\footnotesize
 \begin{verbatim}
 help input tuplelist
+help input gacschema
 help input negativetable
+help input haggisgac
 \end{verbatim}
 }
 \section{constraints watched-and}
@@ -1289,6 +1496,13 @@ set {a1,..,an}.
   help constraints w-literal
 \end{verbatim}
 }
+\section{constraSysInts shortstr2}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+Another type of table constraint.
+\end{verbatim}
+}
 \section{input}
 \paragraph{Description}
 {\footnotesize
@@ -1306,6 +1520,7 @@ InputSection::= <VariablesSection>
               | <SearchSection>
               | <ConstraintsSection> 
               | <TuplelistSection>
+              | <ShortTuplelistSection>
 
 i.e. 'MINION 3' followed by any number of variable, search,
 constraints and tuplelists sections (can repeat) followed by
@@ -1557,11 +1772,77 @@ See also
    switches -varorder
 \end{verbatim}
 }
+\section{input shorttuplelist}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+A shorttuplelist section lists of allowed tuples for haggisgac
+and other constraints which accept short tuple lists.
+
+The required format is
+
+TuplelistSection::= **TUPLELIST**
+                    <Tuplelist>*
+
+Tuplelist::= <name> <num_tuples> <short_tuple>+
+
+short_tuple ::= [ <literal>*, ]
+
+literal ::= (<num>, <num>)
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+**SHORTTUPLELIST**
+mycon 4
+[(0,0),(3,0)]
+[(1,0),(3,0)]
+[(2,0),(3,0)]
+[(0,1),(1,1),(2,1),(3,1)]
+
+Represents the same constraint as:
+
+**TUPLELIST**
+mycon 8 4
+0 0 0 0
+0 0 1 0
+0 1 0 0
+0 1 1 0
+1 0 0 0
+1 0 1 0
+1 1 0 0
+1 1 1 1
+
+Short tuples give us a way of shrinking this list. Short tuples consist
+of pairs (x,y), where x is a varible position, and y is a value for that 
+variable. For example:
+
+[(0,0),(3,0)]
+
+Represents "If the variable at index 0 is 0, and the variable at index
+3 is 0, then the constraint is true".
+
+
+Note that some tuples are double-represented in the example 'mycon'.
+The first 3 short tuples all allow the assignment '0 0 0 0'. This is fine.
+The important thing for efficency is to try to give a small list of 
+short tuples.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help constraints haggisgac
+help constraints haggisgac-stable
+help input tuplelist
+\end{verbatim}
+}
 \section{input tuplelist}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-In a tuplelist section lists of allowed tuples for table constraints
+A tuplelist section lists of allowed tuples for table constraints
 can be specified. This technique is preferable to specifying the
 tuples in the constraint declaration, since the tuplelists can be
 shared between constraints and named for readability.
@@ -1589,6 +1870,7 @@ AtMostOne 4 3
 {\footnotesize
 \begin{verbatim}
 help constraints table
+help input shorttuplelist
 \end{verbatim}
 }
 \section{input variables}
