--- a/docs/Manual.tex
+++ b/docs/Manual.tex
@@ -15,7 +15,7 @@
 
 \providecommand{\boldsymbol}[1]{\mbox{\boldmath $#1$}}
 
-\def\minionversion{0.15RC1}
+\def\minionversion{0.15}
 
 \begin{document}
 
