--- a/docs/latexhelp/doc.tex
+++ b/docs/latexhelp/doc.tex
@@ -60,7 +60,7 @@ alldiff(myVec)
 \paragraph{Notes}
 {\footnotesize
 \begin{verbatim}
-Enforces the same level of consistency as a clique of not equals 
+Enforces the same level of consistency as a clique of not equals
 constraints.
 \end{verbatim}
 }
@@ -72,6 +72,30 @@ See
    help constraints gacalldiff
 
 for the same constraint that enforces GAC.
+\end{verbatim}
+}
+\section{constraints alldiffmatrix}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+For a latin square this constraint is placed on the whole matrix once for each value.
+It ensures there is a bipartite matching between rows and columns where the edges
+in the matching correspond to a pair (row, column) where the variable in position
+(row,column) in the matrix may be assigned to the given value. 
+\end{verbatim}
+}
+\paragraph{Example}
+{\footnotesize
+\begin{verbatim}
+
+alldiffmatrix(myVec, Value)
+\end{verbatim}
+}
+\paragraph{Notes}
+{\footnotesize
+\begin{verbatim}
+This constraint adds some extra reasoning in addition to the GAC Alldifferents
+on the rows and columns.
 \end{verbatim}
 }
 \section{constraints difference}
@@ -135,7 +159,7 @@ diseq(v0,v1)
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    div(x,y,z)
 
 ensures that floor(x/y)=z.
@@ -165,7 +189,7 @@ help constraints modulo
 {\footnotesize
 \begin{verbatim}
 The constraint
- 
+
    div_undefzero(x,y,z)
 
 is the same as div (it ensures that floor(x/y)=z)
@@ -187,11 +211,11 @@ help constraints div
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-The constraint 
+The constraint
 
    element(vec, i, e)
 
-specifies that, in any solution, vec[i] = e and i is in the range 
+specifies that, in any solution, vec[i] = e and i is in the range
 [0 .. |vec|-1].
 \end{verbatim}
 }
@@ -207,7 +231,7 @@ below.
 The level of propagation enforced by this constraint is not named, however it
 works as follows. For constraint vec[i]=e:
 
-- After i is assigned, ensures that min(vec[i]) = min(e) and 
+- After i is assigned, ensures that min(vec[i]) = min(e) and
   max(vec[i]) = max(e).
 
 - When e is assigned, removes idx from the domain of i whenever e is not an
@@ -221,7 +245,7 @@ through vec, except when e is assigned. It does a quantity of cheap propagation
 and may work well in practise on certain problems.
 
 Element is not confluent, which may cause the number of search nodes to vary
-depending on the order in which constraints are listed in the input file, or 
+depending on the order in which constraints are listed in the input file, or
 the order they are called in Minion. For example, the following input causes
 Minion to search 41 nodes.
 
@@ -241,7 +265,7 @@ to the end of the list.
 \paragraph{References}
 {\footnotesize
 \begin{verbatim}
-See the entry 
+See the entry
 
    constraints watchelement
 
@@ -489,7 +513,7 @@ mycon 8 4
 1 1 1 1
 
 Short tuples give us a way of shrinking this list. Short tuples consist
-of pairs (x,y), where x is a varible position, and y is a value for that 
+of pairs (x,y), where x is a varible position, and y is a value for that
 variable. For example:
 
 [(0,0),(3,0)]
@@ -623,7 +647,7 @@ for a similar constraint with strict lexicographic inequality.
 {\footnotesize
 \begin{verbatim}
   This constraint achieves GAC even when some variables are repeated in
-  vec0 and vec1. However, the extra propagation this achieves is rarely 
+  vec0 and vec1. However, the extra propagation this achieves is rarely
   worth the extra work.
 \end{verbatim}
 }
@@ -671,7 +695,7 @@ for a similar constraint with non-strict lexicographic inequality.
 {\footnotesize
 \begin{verbatim}
 An extensional constraint that enforces GAC. The constraint is
-specified via a list of tuples. lighttable is a variant of the 
+specified via a list of tuples. lighttable is a variant of the
 table constraint that is stateless and potentially faster
 for small constraints.
 
@@ -737,12 +761,12 @@ for the opposite constraint.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-MDDC (mddc) is an implementation of MDDC(sp) by Cheng and Yap. It enforces GAC on a 
-constraint using a multi-valued decision diagram (MDD). 
+MDDC (mddc) is an implementation of MDDC(sp) by Cheng and Yap. It enforces GAC on a
+constraint using a multi-valued decision diagram (MDD).
 
 The MDD required for the propagator is constructed from a set of satisfying
 tuples. The constraint has the same syntax as 'table' and can function
-as a drop-in replacement. 
+as a drop-in replacement.
 
 For examples on how to call it, see the help for 'table'. Substitute 'mddc' for
 'table'.
@@ -808,6 +832,28 @@ ensures that x=-y.
 help constraints eq
 \end{verbatim}
 }
+\section{constraints mod\textunderscore undefzero}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+The constraint
+ 
+   mod_undefzero(x,y,z)
+
+is the same as mod except the constraint is always 
+true when y = 0, instead of false.
+
+This constraint exists for certain special requirements.
+In general, if you are unsure what constraint to use,
+then what you want is a plain mod constraint!
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+help constraints mod
+\end{verbatim}
+}
 \section{constraints modulo}
 \paragraph{Description}
 {\footnotesize
@@ -835,38 +881,16 @@ To be fully concrete, here are some examples:
 help constraints div
 \end{verbatim}
 }
-\section{constraints mod\textunderscore undefzero}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-The constraint
- 
-   mod_undefzero(x,y,z)
-
-is the same as mod except the constraint is always 
-true when y = 0, instead of false.
-
-This constraint exists for certain special requirements.
-In general, if you are unsure what constraint to use,
-then what you want is a plain mod constraint!
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-help constraints mod
-\end{verbatim}
-}
 \section{constraints negativemddc}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-Negative MDDC (negativemddc) is an implementation of MDDC(sp) by Cheng and Yap. 
-It enforces GAC on a constraint using a multi-valued decision diagram (MDD). 
+Negative MDDC (negativemddc) is an implementation of MDDC(sp) by Cheng and Yap.
+It enforces GAC on a constraint using a multi-valued decision diagram (MDD).
 
 The MDD required for the propagator is constructed from a set of unsatisfying
 (negative) tuples. The constraint has the same syntax as 'negativetable' and
-can function as a drop-in replacement. 
+can function as a drop-in replacement.
 \end{verbatim}
 }
 \paragraph{Notes}
@@ -886,7 +910,7 @@ specified via a list of disallowed tuples.
 \paragraph{Notes}
 {\footnotesize
 \begin{verbatim}
-See entry 
+See entry
 
    help input negativetable
 
@@ -1070,7 +1094,7 @@ See
 \begin{verbatim}
 ShortSTR2 is the algorithm described in the IJCAI 2013 paper by Jefferson and
 Nightingale. It is an extension of STR2+ by Christophe Lecoutre, adapted for
-short supports. 
+short supports.
 \end{verbatim}
 }
 \paragraph{Example}
@@ -1078,7 +1102,7 @@ short supports.
 \begin{verbatim}
 
 Input format is exactly the same as haggisgac. Refer to the haggisgac and
-shorttuplelist pages for more information. 
+shorttuplelist pages for more information.
 
 Example:
 
@@ -1126,7 +1150,7 @@ str2plus is an implementation of the STR2+ algorithm by Christophe Lecoutre.
 {\footnotesize
 \begin{verbatim}
 
-str2plus is invoked in the same way as all other table constraints, such 
+str2plus is invoked in the same way as all other table constraints, such
 as table and mddc.
 
 str2plus([x,y,z], {<1,2,3>, <1,3,2>})
@@ -1188,7 +1212,7 @@ myext 4 3
 0 1 0
 0 0 1
 
-N.B. the number 4 is the number of tuples in the constraint, the 
+N.B. the number 4 is the number of tuples in the constraint, the
 number 3 is the -arity.
 
 2) Add a table constraint to the **CONSTRAINTS** section, e.g.:
@@ -1215,6 +1239,107 @@ help input tuplelist
 help input gacschema
 help input negativetable
 help input haggisgac
+\end{verbatim}
+}
+\section{constraints w-inintervalset}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+The constraint w-inintervalset(x, [a1,a2, b1,b2, ... ]) ensures that the value
+of x belongs to one of the intervals  {a1,...,a2}, {b1,...,b2} etc. The list of
+intervals must be given in numerical order.
+\end{verbatim}
+}
+\section{constraints w-inrange}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+  The constraint w-inrange(x, [a,b]) ensures that a <= x <= b.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-notinrange
+\end{verbatim}
+}
+\section{constraints w-inset}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+The constraint w-inset(x, [a1,...,an]) ensures that x belongs to the set
+{a1,..,an}.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-notinset
+\end{verbatim}
+}
+\section{constraints w-literal}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+  The constraint w-literal(x, a) ensures that x=a.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-notliteral
+\end{verbatim}
+}
+\section{constraints w-notinrange}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+  The constraint w-notinrange(x, [a,b]) ensures that x < a or b < x.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-inrange
+\end{verbatim}
+}
+\section{constraints w-notinset}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+The constraint w-notinset(x, [a1,...,an]) ensures that x does not belong to the
+set {a1,..,an}.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-inset
+\end{verbatim}
+}
+\section{constraints w-notliteral}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+  The constraint w-notliteral(x, a) ensures that x =/= a.
+\end{verbatim}
+}
+\paragraph{References}
+{\footnotesize
+\begin{verbatim}
+  See also
+
+  help constraints w-literal
 \end{verbatim}
 }
 \section{constraints watched-and}
@@ -1269,11 +1394,11 @@ ensures that at least one of the constraints C1,...,Cn is true.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-The constraint 
+The constraint
 
    watchelement(vec, i, e)
 
-specifies that, in any solution, vec[i] = e and i is in the range 
+specifies that, in any solution, vec[i] = e and i is in the range
 [0 .. |vec|-1].
 \end{verbatim}
 }
@@ -1316,7 +1441,7 @@ for details of watchelement which watchelement_one is based on.
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
-The constraint 
+The constraint
 
    watchelement_undefzero(vec, i, e)
 
@@ -1391,7 +1516,7 @@ The constraint watchless(x,y) ensures that x is less than y.
 \begin{verbatim}
   See also
 
-  help constraints watchsumleq 
+  help constraints watchsumleq
   help constraints litsumgeq
 \end{verbatim}
 }
@@ -1417,7 +1542,7 @@ The constraint watchless(x,y) ensures that x is less than y.
 \begin{verbatim}
   See also
 
-  help constraints watchsumgeq 
+  help constraints watchsumgeq
   help constraints litsumgeq
 \end{verbatim}
 }
@@ -1473,107 +1598,6 @@ help constraints sumleq
 help constraints sumgeq
 \end{verbatim}
 }
-\section{constraints w-inintervalset}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-The constraint w-inintervalset(x, [a1,a2, b1,b2, ... ]) ensures that the value 
-of x belongs to one of the intervals  {a1,...,a2}, {b1,...,b2} etc. The list of 
-intervals must be given in numerical order. 
-\end{verbatim}
-}
-\section{constraints w-inrange}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-  The constraint w-inrange(x, [a,b]) ensures that a <= x <= b.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-notinrange
-\end{verbatim}
-}
-\section{constraints w-inset}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-The constraint w-inset(x, [a1,...,an]) ensures that x belongs to the set 
-{a1,..,an}.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-notinset
-\end{verbatim}
-}
-\section{constraints w-literal}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-  The constraint w-literal(x, a) ensures that x=a.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-notliteral
-\end{verbatim}
-}
-\section{constraints w-notinrange}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-  The constraint w-notinrange(x, [a,b]) ensures that x < a or b < x.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-inrange
-\end{verbatim}
-}
-\section{constraints w-notinset}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-The constraint w-notinset(x, [a1,...,an]) ensures that x does not belong to the
-set {a1,..,an}.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-inset
-\end{verbatim}
-}
-\section{constraints w-notliteral}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-  The constraint w-notliteral(x, a) ensures that x =/= a.
-\end{verbatim}
-}
-\paragraph{References}
-{\footnotesize
-\begin{verbatim}
-  See also
-
-  help constraints w-literal
-\end{verbatim}
-}
 \section{input}
 \paragraph{Description}
 {\footnotesize
@@ -1587,9 +1611,9 @@ Minion3Input::= MINION 3
                 <InputSection>+
                 **EOF**
 
-InputSection::= <VariablesSection> 
+InputSection::= <VariablesSection>
               | <SearchSection>
-              | <ConstraintsSection> 
+              | <ConstraintsSection>
               | <TuplelistSection>
               | <ShortTuplelistSection>
 
@@ -1650,7 +1674,7 @@ Below is a complete minion input file with commentary, as an example.
 
 MINION 3
 
-# While the variable section doesn't have to come first, you can't 
+# While the variable section doesn't have to come first, you can't
 # really do anything until
 # You have one...
 **VARIABLES**
@@ -1779,7 +1803,7 @@ nothing at all...)
 
 Inside the search section one can specify
 
-- variable orderings, 
+- variable orderings,
 - value orderings,
 - optimisation function, and
 - details of how to print out solutions.
@@ -1796,7 +1820,7 @@ anything specified in the input file.
 
 Multiple variable orders can be given, each with an optional value ordering:
 
-   VarValOrdering::= <VarOrder> 
+   VarValOrdering::= <VarOrder>
                      <ValOrder>?
 
 In each VarOrder an instantiation order is specified for a subset of
@@ -1808,7 +1832,7 @@ differing only in the auxiliary variables, only one is reported by minion.
 
       where
 
-   <ORDER>::= STATIC | SDF | SRF | LDF | ORIGINAL | WDEG | CONFLICT | DOMMinionThreeInputReader.hppOVERWDEG
+   <ORDER>::= STATIC | SDF | SRF | LDF | ORIGINAL | WDEG | CONFLICT | DOMOVERWDEG
 
 The value ordering allows the user to specify an instantiation order
 for the variables involved in the variable order, either ascending (a)
@@ -1886,7 +1910,7 @@ mycon 8 4
 1 1 1 1
 
 Short tuples give us a way of shrinking this list. Short tuples consist
-of pairs (x,y), where x is a varible position, and y is a value for that 
+of pairs (x,y), where x is a varible position, and y is a value for that
 variable. For example:
 
 [(0,0),(3,0)]
@@ -1897,7 +1921,7 @@ Represents 'If the variable at index 0 is 0, and the variable at index
 
 Note that some tuples are double-represented in the example 'mycon'.
 The first 3 short tuples all allow the assignment '0 0 0 0'. This is fine.
-The important thing for efficency is to try to give a small list of 
+The important thing for efficency is to try to give a small list of
 short tuples.
 \end{verbatim}
 }
@@ -2340,6 +2364,16 @@ runs (such as -varorder) may have unintended consequences.
 Implies -makeresume.
 \end{verbatim}
 }
+\section{switches -split-stderr}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+The flag -split-stderr has the same function as the flag -split, however the
+two new Minion input files are sent to standard error rather than written to files. 
+
+See documentation for -split. 
+\end{verbatim}
+}
 \section{switches -tableout}
 \paragraph{Description}
 {\footnotesize
@@ -2521,7 +2555,7 @@ Use of a constant:
 
 Use of a constant vector:
 
-   element([10,9,8,7,6,5,4,3,2,1],idx,e) 
+   element([10,9,8,7,6,5,4,3,2,1],idx,e)
 \end{verbatim}
 }
 \section{variables discrete}
@@ -2576,7 +2610,7 @@ eq(myvar, 3) #myvar equals 3
 Vectors, matrices and tensors can be declared in minion
 input. Matrices and tensors are for convenience, as constraints do not
 take these as input; they must first undergo a flattening process to
-convert them to a vector before use. Additional commas at the end of 
+convert them to a vector before use. Additional commas at the end of
 vectors are ignored (see example below).
 \end{verbatim}
 }
@@ -2636,7 +2670,7 @@ Additional hanging commas at the end of array are ignored, e.g.
 
 lexleq([A,B,C,],[D,E,F,])
 
-is equivalent to 
+is equivalent to
 
 lexleq([A,B,C],[D,E,F])
 
